# arkstudy

./: .gitlab-ci.yml  DevOps面试准备指南.md  ai.txt  build.sh  down.sh  go.mod  go.work  go.work.sum  init.sql  架构图与流程图.md  面试准备指南.md  项目架构分析.md
.github/workflows/: ci.yml
deploy/: docker-compose.yml
gateway/: Dockerfile  README.md  go.mod  go.sum  main.go
gateway/docs/: ASR_API.md  openapi.json  ui.go
gateway/handler/: asr_handler.go  auth_handler.go  llm_handler.go  material_handler.go  ocr_handler.go  quiz_handler.go  user_handler.go
gateway/middleware/: auth.go
gateway/router/: router.go
k8s/base/: auth-service.yaml  configmaps.yaml  gateway.yaml  kafka.yaml  kustomization.yaml  llm-service.yaml  material-service.yaml  minio.yaml  namespace.yml  ocr-service.yaml  postgres.yaml  redis.yaml  secrets.yaml  user-service.yaml
pkg/metrics/: go.mod  go.sum  metrics.go
proto/: go.mod  go.sum
scripts/: add-prometheus.sh  deploy-monitoring.sh
services/llm-service/: Dockerfile  README.md  pyproject.toml  requirements.txt  start.sh
services/llm-service/app/: __init__.py  config.py  main.py
services/llm-service/app/core/: chunker.py  database.py  embedding.py  pg_vector_store.py  vector_store.py
services/llm-service/app/grpc_handlers/: llm_handler.py
services/llm-service/app/models/: models.py
services/llm-service/app/proto/llm/: llm_pb2.py  llm_pb2.pyi  llm_pb2_grpc.py
services/llm-service/app/repository/: chunk_repository.py
services/llm-service/app/services/: document_processor.py  kafka_file_processor.py  llm_service.py  memory.py  openai_client.py
(+120 files in other folders)
